Shadow added, wrapping fixed, tags reset

--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,22 @@
-.moyo__body {
+body,
+a,
+ul,
+li {
   margin: 0;
   padding: 0;
 }
 
-.header {
+* {
   box-sizing: border-box;
-  padding: 0 50px;
+}
+
+.header {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  padding: 0 50px;
+  align-items: center;
+
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 .logo {
@@ -16,10 +24,16 @@
 }
 
 .nav__list {
-  margin: 0;
-  padding: 0;
   display: flex;
+
+  flex-wrap: wrap;
   list-style: none;
+}
+
+@media (max-width: 826px) {
+  .nav__list {
+    padding-left: 50px;
+  }
 }
 
 .nav__item:not(:last-of-type) {
@@ -27,7 +41,10 @@
 }
 
 .nav__link {
+  position: relative;
+
   padding: 23px 0;
+
   font-family: Roboto, sans-serif;
   font-size: 12px;
   line-height: 60px;
@@ -35,7 +52,6 @@
   text-decoration: none;
   cursor: pointer;
   color: black;
-  position: relative;
 }
 
 .nav__link:hover {
@@ -48,11 +64,13 @@
 
 .is-active::after {
   position: absolute;
-  content: "";
+  top: 56px;
+
   display: flex;
   width: 100%;
   height: 4px;
+
+  content: "";
   background: #00acdc;
   border-radius: 8px;
-  top: 56px;
 }
